--- a/register-new-guest.html
+++ b/register-new-guest.html
@@ -13,7 +13,7 @@
 <body>
 
 
-<!-- start of  nav-->
+<!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
         <div class="nav-top">
@@ -51,7 +51,8 @@
                         <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
                             <p class="lang-text">Italiano</p>
                         </div>
-                        <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png"/>
+                        <div class="selecting-lang">
+                            <img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png" alt=""/>
                             <p class="lang-text">Deutsch</p>
                         </div>
                     </div>
@@ -67,14 +68,10 @@
         </div>
 
     </div>
-    <div class="menu-mobile">
-        <a class="icon-span">
-            <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="30px" height="30px">
-        </a>
-    </div>
+
     <nav class="nav-bottom">
         <ul  >
-            <li><a href="index.html">
+            <li><a href="https://www.pyramid-challenge.com">
                 Home
             </a></li>
             <li><a href="about-us.html">
@@ -93,7 +90,92 @@
     </nav>
     </div>
 </section>
+<!-- mobile menu-->
+<section id="nav-mobile">
+    <div class="container">
+        <div class="mobile-logo">
+            <img src="img/second-logo.png" alt="logo">
+            <img src="img/second-logo2.png" alt="">
+        </div>
+        <div class="nav-top">
 
+            <!--        logo -->
+            <div class="second-logo">
+                <div class="logo wow fadeInUp" data-wow-duration="1.8s" data-wow-delay="1s">
+                    <img src="img/logo.png" alt="logo">
+                </div>
+                <div class="text-second-logo" >
+                    <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
+                        <span>Pyramid Challenge</span>
+                        <span>Digital Hotels</span>
+                    </h2>
+                    <div class="switch-lang">
+                        <div class="current-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_United_Kingdom.png"/>
+                            <p class="lang-text">English</p>
+                        </div>
+                        <div class="lang-dropdown">
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Spain.png"/>
+                                <p class="lang-text">Español</p>
+                            </div>
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_France.png"/>
+                                <p class="lang-text">Français</p>
+                            </div>
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Italy.png"/>
+                                <p class="lang-text">Italiano</p>
+                            </div>
+                            <div class="selecting-lang"><img class="lang-flag" src="https://cdn2.iconfinder.com/data/icons/world-flag-icons/128/Flag_of_Germany.png"/>
+                                <p class="lang-text">Deutsch</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--          text-second-logo  -->
+                <div class="menu-mobile">
+                    <a class="icon-span">
+                        <img src="img/menu.svg.png" class="icon-mobile" alt="mobile-icon" width="30px" height="30px">
+                    </a>
+                </div>
+
+            </div>
+            <div class="quote-text">
+                <p>for best content view , go to desktop , laptop </p>
+            </div>
+            <!--        second logo -->
+
+        </div>
+
+    </div>
+
+    <nav class=" nav-bottom-mobile">
+        <ul  >
+            <li><a href="https://www.pyramid-challenge.com">
+                Home
+            </a></li>
+            <li><a href="about-us.html">
+                About Us
+            </a></li>
+            <li><a href="empty.html">
+                Buy Digital Key
+            </a></li>
+            <li><a href="empty.html">
+                FAQ
+            </a></li>
+            <li><a href="contact.html">
+                Contact Us
+            </a></li>
+            <li><a href="#">
+                Register New Guest
+            </a></li>
+            <li>
+                <a href="#">
+                    Sign in
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+</section>
 <!-- end of nav-->
 <!-- start of form-->
 <section id="form">
